Closed Bug 1597822 Opened 6 years ago Closed 6 years ago

intl.l10n.pseudo = bidi doesn't bidi-ify all of the UI text

Categories

(Core :: Internationalization, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: zbraniecki)

References

Details

Attachments

(5 files)

Attached image intl.l10n.pseudo=bidi

Please see the screenshot, note how the text in the title of the active tab, new tab suggestions, or the Firefox menu appears normally.

Component: Localization → Internationalization
Attachment #9110104 - Attachment description: Screenshot → intl.l10n.pseudo=bidi
Attached image ar locale

Three different modes that should create right-to-left experience.

The reference one is ar locale which represents the experience of using an Arabic locale (via langpack).

The two "pseudo" modes are intl.uidirection and intl.l10n.pseudo=bidi.

intl.uidirection seems to match the ar locale quite closely!

intl.l10n.pseudo differs in several areas:

  • The arrows in the hamburger menu are in the wrong direction
  • The urlbar placeholder is aligned to left instead of right
  • The back/forward arrows in the urlbar are in the wrong direction
  • Reload button is reversed
  • The sidebar icons is reversed

I think that's all? If you see any other differences, please list them.

I believe the source of the diff is in two files that observe intl.uidirection but not intl.l10n.pseudo:

Let's fix that!

Assignee: nobody → gandalf
Status: NEW → ASSIGNED
Attached image intl.l10n.pseudo.png

Here's the same screenshot as the original one from Ehsan, but with the patch applied.

I believe it fixes all noticed discrepancies.

Priority: -- → P3

What about some of the text not being bidi-flipped?

Those are strings still using DTD/.properties. We're migrating them to Fluent.

I see, thanks!

Jonathan - ping in case your phabricator queue is not reminding you about this r? :)

Flags: needinfo?(jfkthame)
Pushed by zbraniecki@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/986ce7d1b67a Hook up intl.l10n.pseudo in DOM/chrome. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
QA Whiteboard: [qa-72b-p2]

Zibi, it seems that this is still an issue?
I thought maybe this regressed since it was fixed on November 26th so I ran mozregression but I got to November 25th and I still see this being an issue.

Am I missing something?

Flags: needinfo?(gandalf)

@Itiel - can you file a new bug with a screenshot and STR? I doubt this is the same issue. It may also be about strings that are not using Fluent yet.

Flags: needinfo?(gandalf)
Flags: needinfo?(jfkthame)
Blocks: 1614767
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: