Bug 1597822 - Hook up intl.l10n.pseudo in DOM/chrome. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D53892

--HG--
extra : moz-landing-system : lando